# Chess

./: Cargo.toml
src/: app.rs  constants.rs  event.rs  handler.rs  lib.rs  logging.rs  main.rs  utils.rs
src/game_logic/: board.rs  bot.rs  coord.rs  game.rs  game_board.rs  mod.rs  opponent.rs  ui.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
src/server/: game_server.rs
src/ui/: main_ui.rs  popups.rs  prompt.rs  tui.rs
website/: docusaurus.config.ts  sidebars.ts
website/docs/Configuration/: display.md  logging.md
website/docs/Installation/: Arch Linux.md  Binary.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.tsx
